# jughisto

./: .dev_env  .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  build.sh  dev.Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
alvokanto/: Cargo.toml  Dockerfile  dev.Dockerfile
alvokanto/src/: isolate.rs  language.rs  main.rs  queue.rs
migrations/2020-10-02-203647_user/: up.sql
migrations/2020-10-02-204648_contest/: down.sql  up.sql
migrations/2020-10-02-204655_problem/: down.sql  up.sql
migrations/2020-10-06-035417_contest_problems/: down.sql  up.sql
migrations/2020-10-07-035153_submission/: down.sql  up.sql
migrations/2020-10-11-035417_contest_problems/: up.sql
proto/: job_queue.proto
src/: broadcaster.rs  flash.rs  import_contest.rs  isolate.rs  language.rs  lib.rs  main.rs  models.rs  queue.rs  schema.rs  setup.rs
src/models/: contest.rs  problem.rs  submission.rs  user.rs
static/: index.html  styles.css
templates/: base.html.hbs  contest.html.hbs  contest_problem.html.hbs  contests.html.hbs  index.html.hbs  login.html.hbs  main.html.hbs  manage_contests.html.hbs  me.html.hbs  submissions.html.hbs
verdict-tests/: mle.cpp  mle2.cpp
