[package]
name = "jughisto"
version = "0.1.0"
authors = ["Fernando K. <fer22f@gmail.com>"]
edition = "2018"

[lib]
name = "jughisto"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.0-beta.6"
actix-identity = "0.4.0-beta.2"
actix-http = "3.0.0-beta.1.0"
actix-files = "0.6.0-beta.7"
actix-multipart = "0.4.0-beta.6"
actix-session = "0.5.0-beta.2"
r2d2 = "0.8.9"
handlebars = { version = "4.1.2", features = ["dir_source"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.130", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
rust-argon2 = "0.8.3"
zip = "0.5.13"
thiserror = "1.0.29"
quick-xml = { version = "0.22.0", features = ["serialize"] }
libsqlite3-sys = { version = "0.22.2", features = ["bundled"] }
regex = "1.5.4"
which = "4.2.2"
serde_json = "1.0.67"
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.17"
listenfd = "0.3.5"
tokio = { version = "1.11.0", features = ["sync", "macros", "rt-multi-thread"] }
log = "0.4.14"
lazy_static = "1.4.0"
chrono-tz = "0.5.3"
tonic = "0.5.2"
prost = "0.8"
async-channel = "1.6.1"
dashmap = "3.11.10"

[build-dependencies]
tonic-build = "0.5.2"
